# archpkg-helper

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Contribute.md  LICENSE  README.md  archpkg.py  install.sh  pyproject.toml  setup.py  validate_mapping.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
archpkg/: cache.py  cli.py  command_gen.py  completion.py  config.py  exceptions.py  logging_config.py  search_apt.py  search_aur.py  search_dnf.py  search_flatpak.py  search_pacman.py  search_snap.py  suggest.py
archpkg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
archpkg_helper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
archpy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
data/: purpose_mapping.yaml
docs/: AUTOCOMPLETE.md
scripts/: test_completion.py
scripts/autocomplete/: _archpkg  archpkg.bash  archpkg.fish  install_completion.sh
