[project]
name = "archpkg"
version = "0.1.0"
description = "Your ArchPkg CLI tool"
authors = [{ name="AdmGenSameer", email="sameers00324@gmail.com" }]
readme = "README.md"
requires-python = ">=3"

dependencies = [
  "requests",
  "rich",
  "typer[all]",
  "distro"
]

[project.scripts]
archpkg = "archpkg.cli:app"
